Add a schematics folder
Create a first .drawio.svg file for future designs in the folder
Create a README.md file for convention specs
Adapt the makefile to the new source folder

--- a/report/makefile
+++ b/report/makefile
@@ -5,12 +5,11 @@ SOURCE = main
 OUT_DIR = ./temp
 LATEX_CMD = latex -output-format='pdf' -output-directory=$(OUT_DIR) $(SOURCE).tex
 
-draw_src = $(shell find ./figure/ -type f -name "*.drawio.svg")
-draw_target = $(draw_src:./figure/%.draw.svg=./figure/%.draw.png)
+draw_src = $(shell find ../schematics -type f -name "*.drawio.svg")
+draw_target = $(draw_src:../schematics/%.drawio.svg=./figure/%.drawio.png)
 #https://unix.stackexchange.com/questions/140912/no-target-error-using-make
 
 
-<<<<<<< HEAD
 # Need install "latex" and "texlive-bibtex-extra"
 ./$(OUT_DIR)/$(SOURCE).aux: *.tex ./texContent/* $(draw_target) makefile
 	if [ ! -d "temp/" ]; then mkdir temp;  mkdir temp/texContent; fi
@@ -18,24 +17,15 @@ draw_target = $(draw_src:./figure/%.draw.svg=./figure/%.draw.png)
 	bibtex ./$(OUT_DIR)/$(SOURCE)
 # https://www.dickimaw-books.com/software/bib2gls/
 # bug need java
-=======
-./$(OUT_DIR)/$(SOURCE).aux: *.tex ./texContent/* $(draw_target) makefile
-	$(LATEX_CMD)
-	bibtex ./$(OUT_DIR)/$(SOURCE)
->>>>>>> 628323b (Import files from previous MCSE projects)
 	bib2gls ./$(OUT_DIR)/$(SOURCE)
 #	$(LATEX_CMD)
 #	$(LATEX_CMD)
 	mv ./temp/main.pdf ./$(PRJ_NAME).pdf
 
-<<<<<<< HEAD
-
-=======
->>>>>>> 628323b (Import files from previous MCSE projects)
 # generate png from svg
 #	Input svg file, <name>.draw.svg
 #	Output png file, <name>.draw.png
-./figure/%.draw.png: ./figure/%.drawio.svg
+./figure/%.drawio.png: ../schematics/%.drawio.svg
 	inkscape --export-area-drawing --export-dpi=300 --export-png=$@ $<
 
 clean:
@@ -45,7 +35,3 @@ reset:
 	make clean
 	rm -f $(SOURCE).pdf
 	rm -R -f temp
-<<<<<<< HEAD
-=======
-	mkdir temp
->>>>>>> 628323b (Import files from previous MCSE projects)
