Correct report environment - create temp directory

--- a/report/makefile
+++ b/report/makefile
@@ -10,13 +10,18 @@ draw_target = $(draw_src:./figure/%.draw.svg=./figure/%.draw.png)
 #https://unix.stackexchange.com/questions/140912/no-target-error-using-make
 
 
+# Need install "latex" and "texlive-bibtex-extra"
 ./$(OUT_DIR)/$(SOURCE).aux: *.tex ./texContent/* $(draw_target) makefile
+	if [ ! -d "temp/" ]; then mkdir temp;  mkdir temp/texContent; fi
 	$(LATEX_CMD)
 	bibtex ./$(OUT_DIR)/$(SOURCE)
+# https://www.dickimaw-books.com/software/bib2gls/
+# bug need java
 	bib2gls ./$(OUT_DIR)/$(SOURCE)
 #	$(LATEX_CMD)
 #	$(LATEX_CMD)
 	mv ./temp/main.pdf ./$(PRJ_NAME).pdf
+
 
 # generate png from svg
 #	Input svg file, <name>.draw.svg
@@ -31,4 +36,3 @@ reset:
 	make clean
 	rm -f $(SOURCE).pdf
 	rm -R -f temp
-	mkdir temp
