--- a/report/makefile
+++ b/report/makefile
@@ -35,3 +35,8 @@ reset:
 	make clean
 	rm -f $(SOURCE).pdf
 	rm -R -f temp
+
+# Copy the current version of the report at the root of the project
+release:
+	if [ ! -d "./$(PRJ_NAME).pdf" ]; then make; fi
+	if [ ! -d "../$(PRJ_NAME).pdf" ]; then cp ./$(PRJ_NAME).pdf ../; fi
