Add a release option to the makefile
"make release" compiles and copies the report at the root of the
project. It is meant to be used when some effective work was done.

--- a/report/makefile
+++ b/report/makefile
@@ -38,5 +38,5 @@ reset:
 
 # Copy the current version of the report at the root of the project
 release:
-	if [ ! -d "./$(PRJ_NAME).pdf" ]; then make; fi
-	if [ ! -d "../$(PRJ_NAME).pdf" ]; then cp ./$(PRJ_NAME).pdf ../; fi
+	make
+	cp -f ./$(PRJ_NAME).pdf ../
